# MyLittleIRAM

./: .gitignore  CMakeLists.txt  README.md  main.c  out.txt  out2.txt  requirements.txt
mymath/: CMakeLists.txt  mymath.c  mymath.h
scripts/: _matrix_functions.py  dl_matrix_market.py  read_matrix_market.py  verified_arnoldi.py  verify_conjugate.py  verify_conjugate_tr.py  verify_dgemm.py  verify_eigen.py  verify_qr.py
src/: CMakeLists.txt  main.c
src/mmio/: CMakeLists.txt
src/mymath/: CMakeLists.txt  mymath.c  mymath.h
